--- a/bouncing-balls.html
+++ b/bouncing-balls.html
@@ -12,7 +12,12 @@
         background-color: rgba(23, 55, 214, 0.621);
         border-radius: 50%;
         transform: scale(1);
-        transition: transform 1s ease-out, background-color 1s linear;
+        top: 0vh;
+        left: 0vw;
+        transition: transform 1s ease-out, 
+            background-color 1s linear, 
+            top 0.1s linear, 
+            left 0.1s linear;
        }
        .sprite.explosion {
         transform: scale(8);
@@ -41,16 +46,19 @@
             sprite.style.pointerEvents = 'none';
             count = count - 1;
             score.innerHTML = count;
+            sprite._killed = true;
         },{once: true});
         sprite.addEventListener('transitionend', () => {
-            sprite.remove();
-        },{once: true});
+            if (sprite._killed) {
+                sprite.remove();
+            }
+        });
         document.body.appendChild(sprite);
         // closure
         let ypos = 0;
         let xpos = 0;
-        let yspeed = Math.random()/10+0.2;
-        let xspeed = Math.random()/10+0.2;
+        let yspeed = Math.random()+0.2;
+        let xspeed = Math.random()+0.2;
         setInterval(() => {
             ypos = ypos + yspeed;
             xpos = xpos + xspeed;
@@ -62,7 +70,7 @@
             if ( xpos > 90 || xpos < 0) {
                 xspeed = xspeed * -1;
             }
-        },20);
+        },100);
     }
     score.innerHTML = count;
 </script>
